--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -13,7 +13,7 @@
         </header>
         <nav>
           <a href="#instructions" class="navAnchor">instructions</a>
-          <a href="#game" class="navAnchor">game</a>
+          <a href="#game-board" class="navAnchor">game</a>
         </nav>
         <main>
         <h2 id="instructions">Instructions</h2>
@@ -23,16 +23,16 @@
              each turn. The object of the <br>game is to turn over pairs 
              of matching cards
         </p>
-        <div id="game">
-            <img src="images/back.png" alt="Queen of Diamonds">
-            <img src="images/back.png" alt="Queen of Hearts">
-            <img src="images/back.png" alt="King of Diamonds">
-            <img src="images/back.png" alt="King of Hearts">
+        <div id="game-board" class="board-clearfix">
+            <a href="index.html">
+            <input type="reset" value="Reset" class="resetButton">
+            </a>
         </div>
+
         </main>
         <footer class="clearfix">
-            <a href="https://www.instagram.com/nemi66/?hl=en" target="blank">
-            Instagram
+            <a href="https://www.linkedin.com/in/nehemias-cruz?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BFxleKSe%2FTgOmvEdXIybcLw%3D%3D" target="blank" id="linkedin">
+            LinkedIn
             </a>
             <p class="copyright">Copyright 2017</p>
             <p class="message">Created with &hearts; by <span class="name"><a href="https://generalassemb.ly/" target="blank">GA</a></span></p>
